# OOP_project

./: CMakeLists.txt  README.md
Project_managment_tool/: CMakeLists.txt  db_manager.h  employee.cpp  employee.h  functions.cpp  functions.h  main.cpp  personaltask.cpp  personaltask.h  project.cpp  project.h  role.h  role_class.cpp  role_class.h  task.cpp  task.h  worktask.cpp  worktask.h
Project_managment_tool/JsonSerializer/: CMakeLists.txt  jsonserializer.cpp  jsonserializer.hpp  main.cpp
Project_managment_tool/LogicLib/: CMakeLists.txt
Project_managment_tool/LogicLib/include/: db_manager.h  employee.h  functions.h  task.h  worktask.h
Project_managment_tool/LogicLib/src/: db_manager.cpp  employee.cpp  functions.cpp  personaltask.cpp  project.cpp  role_class.cpp  task.cpp  worktask.cpp
Project_managment_tool/Resources/qrc/: icons.qrc
Project_managment_tool/SourceFiles/: main.cpp  mainwindow.cpp  mainwindow.h
Project_managment_tool/SourceFiles/Login/: logininterface.cpp  logininterface.h  logininterface.ui
Project_managment_tool/lib_include/: db_manager.h  employee.h  functions.h  personaltask.h  project.h  role_class.h  worktask.h
